--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.1.0",
 		"@fontsource-variable/noto-sans": "^5.1.0",
+		"@formkit/auto-animate": "^0.8.2",
+		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -20,14 +23,18 @@
 		"moms-realestate-page": "link:",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.2",
 		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"validator": "^13.12.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
 		"@types/node": "^22.9.0",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
+		"@types/validator": "^13.12.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.13.0",
