--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@formkit/auto-animate": "^0.8.2",
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-portal": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
